--- a/03-handling-missing-values.ipynb
+++ b/03-handling-missing-values.ipynb
@@ -2,24 +2,23 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "02edc6ea-5b8e-4e31-a9cc-5456f55bb966",
+   "id": "68f6ebe6-72ea-4d0b-a80c-8bec5a37fe2b",
    "metadata": {},
    "source": [
-    "**This tutorial will cover**\n",
+    "# Handling Missing Values\n",
     "\n",
-    "* PySpark DataFrames\n",
-    "* Reading datasets\n",
-    "* Checking the data types of columns (schema)\n",
-    "* Selecting columns and indexing\n",
-    "* Check describe option (which is similar to Pandas)\n",
-    "* Adding columns\n",
-    "* Dropping columns"
+    "**This tutorial will cover:**\n",
+    "\n",
+    "* Dropping columns\n",
+    "* Dropping rows\n",
+    "* Various parameters in dropping functions\n",
+    "* Handling missing values by mean"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bea52fb4-0e49-49b6-9b89-6934d3dbf3e1",
+   "id": "59577ac7-df6e-42b8-933d-c6b44792ace5",
    "metadata": {},
    "outputs": [],
    "source": []
